[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/screens/LoseScreen.gd" type="Script" id=1]

[node name="LoseScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 468.0
margin_top = 222.0
margin_right = 544.0
margin_bottom = 278.0

[node name="LoseLabel" type="Label" parent="VBoxContainer"]
margin_right = 76.0
margin_bottom = 14.0
text = "GAME OVER"

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 76.0
margin_bottom = 32.0
text = "Score:"

[node name="PlayAgain" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 76.0
margin_bottom = 56.0
text = "Play again"
